--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "discord-api-types": "^0.27.0",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "log4js": "^6.4.1",
+    "mongodb": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.15",
